Make whole JDK available